--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   },
   "Logging": {
     "MinimumLevel": "Debug",
-    "FilePath": "Logs/pricisapp-{Date}.log",
+    "FilePath": "./Logs/pricisapp-{Date}.log",
     "RetainedFileCount": 7,
     "FileSizeLimitBytes": 10000000
   },
@@ -27,5 +27,72 @@
       "Name": "Segoe UI",
       "Size": 9.0
     }
+  },
+  "Sentry": {
+    "Dsn": "",
+    "MinimumEventLevel": "Error",
+    "SendDefaultPii": false,
+    "AttachStacktrace": true,
+    "Debug": false,
+    "DiagnosticsLevel": "Error"
+  },
+  "AppCenter": {
+    "SecretKey": "",
+    "EnableAnalytics": true,
+    "EnableCrashes": true
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/pricisapp-.json",
+          "rollingInterval": "Day",
+          "fileSizeLimitBytes": 10485760,
+          "retainedFileCountLimit": 7,
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./Logs/pricisapp-.txt",
+          "rollingInterval": "Day",
+          "fileSizeLimitBytes": 10485760,
+          "retainedFileCountLimit": 7,
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithProcessId"
+    ],
+    "Properties": {
+      "Application": "PricisApp"
+    }
+  },
+  "CacheSettings": {
+    "DefaultDurationMinutes": 5,
+    "TaskCacheDurationMinutes": 10
   }
-} 
+}
